# test_lexicom

./: .env  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
src/: config.py  dao.py  exceptions.py  main.py  router.py  schemas.py  service.py
src/utils/: phone_number.py
