[tool.poetry]
name = "test-lexicom-1"
version = "0.1.0"
description = ""
authors = ["Rulezzz <chulanovate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
pydantic-settings = "^2.4.0"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
